deploy: d46122654984a7f43c9bff8c70d5415ea72c3340

--- a/about.html
+++ b/about.html
@@ -5,21 +5,21 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="./_app/immutable/assets/0.b9157d4f.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/0.a35d57c5.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Title.d8cb5de4.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.7423b60c.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.610f6c72.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.d96b1147.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.d54fe2df.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.3ed5a6c3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.0d30a2cd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.55337b2e.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.37e767b6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.041c6ff6.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.2ab5cd71.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.2aa5d528.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.cff3392e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.8a54911c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.96a48171.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.cb2a5964.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.89366f16.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/context.31d84fd2.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/3.1404418e.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.058d9be3.js">
@@ -27,7 +27,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/section.325abacc.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Title.e6c4c11c.js"><title>Portfolio | Home</title><!-- HEAD_svelte-17ilb5s_START --><script data-svelte-h="svelte-8kopwt"></script><script defer data-domain="blaine.vip" data-svelte-h="svelte-112zxyl"></script><!-- HEAD_svelte-17ilb5s_END --><!-- HEAD_svelte-1v0zer8_START --><meta name="description" content="Portfolio"><meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1"><link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png"><link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png"><link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png"><link rel="manifest" href="/site.webmanifest"><meta name="msapplication-TileColor" content="#da532c"><meta name="theme-color" content="#ffffff"><!-- HEAD_svelte-1v0zer8_END --><!-- HEAD_svelte-llpzfy_START --><meta name="twitter:card" content="summary_large_image"><meta name="twitter:image" content="/logo.svg"><meta name="twitter:creator" content="@BlaineSensei"> <meta name="twitter:site" content="@BlaineSensei"><meta name="twitter:label1" content="Written by"><meta name="twitter:data1" content="Rishikesh &quot;Blaine&quot; Anand"><!-- HEAD_svelte-llpzfy_END --><!-- HEAD_svelte-11ia4bj_START --><meta property="og:site_name" content="Portfolio"><meta property="og:locale" content="en-US"><meta property="og:url" content="https://blaine.is-a.dev/"><meta property="og:type" content="website"><meta property="og:title" content="Portfolio | Home"><meta property="og:description" content="Portfolio"><meta property="og:image" content="/logo.svg"> <meta property="og:image:width" content="1200"> <meta property="og:image:height" content="627"> <meta property="og:image:alt" content="some unoriginal picture"><meta property="og:image" content="/logo.svg"> <meta property="og:image:width" content="400"> <meta property="og:image:height" content="400"> <meta property="og:image:alt" content="some unoriginal picture"><!-- HEAD_svelte-11ia4bj_END --><!-- HEAD_svelte-1iav221_START --><!-- HTML_TAG_START -->
 		<script type="application/ld+json">
-			{"@context":"https://schema.org","@graph":[null,{"@type":"WebSite","@id":"https://blaine.is-a.dev/#website","url":"https://blaine.is-a.dev","name":"Portfolio","description":"Portfolio","publisher":{"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87"},"potentialAction":[{"@type":"SearchAction","target":"https://blaine.is-a.dev/?s={search_term_string}","query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"https://blaine.is-a.dev/#primaryimage","inLanguage":"en-US","url":"/logo.svg","contentUrl":"/logo.svg","width":672,"height":448,"caption":"Home page"},{"@type":"WebPage","@id":"https://blaine.is-a.dev/#webpage","url":"https://blaine.is-a.dev/","name":"Portfolio | Home","isPartOf":{"@id":"https://blaine.is-a.dev/#website"},"primaryImageOfPage":{"@id":"https://blaine.is-a.dev/#primaryimage"},"datePublished":"1701294584847","dateModified":"1701294584847","author":{"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87"},"description":"Portfolio","breadcrumb":{"@id":"https://blaine.is-a.dev/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://blaine.is-a.dev/"]}]},{"@type":"BreadcrumbList","@id":"https://blaine.is-a.dev/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://blaine.is-a.dev/","url":"https://blaine.is-a.dev/","name":"home"}}]},{"@type":["Person","Organization"],"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87","name":"Home","image":{"@type":"ImageObject","@id":"https://blaine.is-a.dev/#personlogo","inLanguage":"en-US","url":"https://blaine.is-a.dev/assets/rodneylab-logo.png","contentUrl":"https://blaine.is-a.dev/assets/rodneylab-logo.png","width":512,"height":512,"caption":"Home"},"logo":{"@id":"https://blaine.is-a.dev/#personlogo"},"sameAs":["https://twitter.com/BlaineSensei","https://github.com/Blakeinstein","https://linkedin.com/in/blakeinstein"]}]}
+			{"@context":"https://schema.org","@graph":[null,{"@type":"WebSite","@id":"https://blaine.is-a.dev/#website","url":"https://blaine.is-a.dev","name":"Portfolio","description":"Portfolio","publisher":{"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87"},"potentialAction":[{"@type":"SearchAction","target":"https://blaine.is-a.dev/?s={search_term_string}","query-input":"required name=search_term_string"}],"inLanguage":"en-US"},{"@type":"ImageObject","@id":"https://blaine.is-a.dev/#primaryimage","inLanguage":"en-US","url":"/logo.svg","contentUrl":"/logo.svg","width":672,"height":448,"caption":"Home page"},{"@type":"WebPage","@id":"https://blaine.is-a.dev/#webpage","url":"https://blaine.is-a.dev/","name":"Portfolio | Home","isPartOf":{"@id":"https://blaine.is-a.dev/#website"},"primaryImageOfPage":{"@id":"https://blaine.is-a.dev/#primaryimage"},"datePublished":"1701301150842","dateModified":"1701301150842","author":{"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87"},"description":"Portfolio","breadcrumb":{"@id":"https://blaine.is-a.dev/#breadcrumb"},"inLanguage":"en-US","potentialAction":[{"@type":"ReadAction","target":["https://blaine.is-a.dev/"]}]},{"@type":"BreadcrumbList","@id":"https://blaine.is-a.dev/#breadcrumb","itemListElement":[{"@type":"ListItem","position":1,"item":{"@type":"WebPage","@id":"https://blaine.is-a.dev/","url":"https://blaine.is-a.dev/","name":"home"}}]},{"@type":["Person","Organization"],"@id":"https://blaine.is-a.dev/#/schema/person/4ad9bd210a999134292c9b4dbaf6fa87","name":"Home","image":{"@type":"ImageObject","@id":"https://blaine.is-a.dev/#personlogo","inLanguage":"en-US","url":"https://blaine.is-a.dev/assets/rodneylab-logo.png","contentUrl":"https://blaine.is-a.dev/assets/rodneylab-logo.png","width":512,"height":512,"caption":"Home"},"logo":{"@id":"https://blaine.is-a.dev/#personlogo"},"sameAs":["https://twitter.com/BlaineSensei","https://github.com/Blakeinstein","https://linkedin.com/in/blakeinstein"]}]}
 		</script>
 	<!-- HTML_TAG_END --><!-- HEAD_svelte-1iav221_END -->
 	</head>
@@ -44,7 +44,7 @@
 			
 			<script>
 				{
-					__sveltekit_tn76ae = {
+					__sveltekit_1e3eunt = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -54,8 +54,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.7423b60c.js"),
-						import("./_app/immutable/entry/app.55337b2e.js")
+						import("./_app/immutable/entry/start.610f6c72.js"),
+						import("./_app/immutable/entry/app.37e767b6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 3],
