--- a/projects/remit-tracker.html
+++ b/projects/remit-tracker.html
@@ -5,24 +5,24 @@
 		<link rel="icon" href="../favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		
-		<link href="../_app/immutable/assets/0.b9157d4f.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.a35d57c5.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.ca08bbd9.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.7423b60c.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.610f6c72.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.d96b1147.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.d54fe2df.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.3ed5a6c3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.0d30a2cd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.f5b05b5f.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.55337b2e.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.37e767b6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.41c905a7.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.041c6ff6.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.2ab5cd71.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.2aa5d528.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.cff3392e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.8a54911c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.96a48171.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.cb2a5964.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.89366f16.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.31d84fd2.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.9508434e.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.194535f5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.444ddb24.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.b4cda45e.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.4240cad6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/section.325abacc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/each.e59479a4.js"><!-- HEAD_svelte-17ilb5s_START --><script data-svelte-h="svelte-8kopwt"></script><script defer data-domain="blaine.vip" data-svelte-h="svelte-112zxyl"></script><!-- HEAD_svelte-17ilb5s_END -->
@@ -38,7 +38,7 @@ The data spider is hosted on <a href="https://www.zyte.com/" rel="nofollow">Zyte
 			
 			<script>
 				{
-					__sveltekit_tn76ae = {
+					__sveltekit_1e3eunt = {
 						base: new URL("..", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -48,8 +48,8 @@ The data spider is hosted on <a href="https://www.zyte.com/" rel="nofollow">Zyte
 					const data = [null,null];
 
 					Promise.all([
-						import("../_app/immutable/entry/start.7423b60c.js"),
-						import("../_app/immutable/entry/app.55337b2e.js")
+						import("../_app/immutable/entry/start.610f6c72.js"),
+						import("../_app/immutable/entry/app.37e767b6.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 6],
