--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Button.7f004056.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Title.9af7b100.css" rel="stylesheet">
-		<link href="./_app/immutable/entry/start.d5a93181.js" rel="modulepreload">
+		<link href="./_app/immutable/entry/start.98e73988.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="./_app/immutable/chunks/singletons.e9ac4644.js" rel="modulepreload">
+		<link href="./_app/immutable/chunks/singletons.568fe510.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="./_app/immutable/entry/app.305d15e9.js" rel="modulepreload">
+		<link href="./_app/immutable/entry/app.9748c142.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="./_app/immutable/nodes/0.81236cbb.js" rel="modulepreload">
+		<link href="./_app/immutable/nodes/0.dcf7c39e.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="./_app/immutable/chunks/stores.8883e9db.js" rel="modulepreload">
+		<link href="./_app/immutable/chunks/stores.f624a554.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="./_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
 		<link href="./_app/immutable/nodes/4.42510ae5.js" rel="modulepreload">
@@ -52,7 +52,7 @@
       </defs>
       </svg><!-- HTML_TAG_END --></a><div class="grid-center social-icon svelte-90rxw">Gaming</div> <a class="grid-center social-icon svelte-90rxw" href="https://steamcommunity.com/id/BlaineSensei/" data-blobity-tooltip="Steam" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:linear-gradient(120deg,#00adee,#000)"></a><a class="grid-center social-icon svelte-90rxw" href="https://discord.com/" data-blobity-tooltip="Discord Tag : Blaine#6960" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:#8697f6"></a><a class="grid-center social-icon svelte-90rxw" href="https://www.blizzard.com/en-us/" data-blobity-tooltip="Battle.net Tag : Blaine#22648" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:#2e60b4"></a><div class="grid-center social-icon svelte-90rxw">Other</div> <a class="grid-center social-icon svelte-90rxw" href="https://myanimelist.net/profile/Blakeinstein" data-blobity-tooltip="MyAnimeList" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:#2c54a4"></a><a class="grid-center social-icon svelte-90rxw" href="https://soundcloud.com/blakeinstein" data-blobity-tooltip="Soundcloud" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:#f75219"></a><a class="grid-center social-icon svelte-90rxw" href="https://open.spotify.com/user/c3fph9vexjdfvvdmh7h9kjdqv" data-blobity-tooltip="Spotify" rel="noopener noreferrer" target="_blank" data-blobity-radius="16" style="background:#1ed760"></a></div></div> </section> </main> 
 			
-			<script>{__sveltekit_wyqz4h={base:new URL(".",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("./_app/immutable/entry/start.d5a93181.js"),import("./_app/immutable/entry/app.305d15e9.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,4],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tee93z={base:new URL(".",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("./_app/immutable/entry/start.98e73988.js"),import("./_app/immutable/entry/app.9748c142.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,4],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
