--- a/projects/chemical-pfd.html
+++ b/projects/chemical-pfd.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.5ab10349.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.1173c233.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
-		<link href="../_app/immutable/entry/start.d5a93181.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/start.98e73988.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/singletons.e9ac4644.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/singletons.568fe510.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="../_app/immutable/entry/app.305d15e9.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/app.9748c142.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/0.81236cbb.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/0.dcf7c39e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/stores.8883e9db.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/stores.f624a554.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
 		<link href="../_app/immutable/nodes/6.b1f206d1.js" rel="modulepreload">
@@ -39,7 +39,7 @@ faster iterations with a more robust build process. I worked in a team of 2 in a
 focusing on the diagram engine. The project was built in a span of 2 months.</p> <h2 data-svelte-h="svelte-a7lr1u">About FOSSEE</h2> <p data-svelte-h="svelte-odycjk"><a href="https://fossee.in" rel="nofollow">FOSSEE</a> (Free/Libre and Open Source Software for Education) project promotes the use of FLOSS tools to improve the quality of education in our country. We aim to reduce dependency on proprietary software in educational institutions. We encourage the use of FLOSS tools through various activities to ensure commercial software is replaced by equivalent FLOSS tools. We also develop new FLOSS tools and upgrade existing tools to meet requirements in academia and research.
 The FOSSEE project is part of the National Mission on Education through Information and Communication Technology (ICT), Ministry of Education (MoE), Government of India.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-19mur4c"><li>Was coined the best software on the FOSSEE 2020 presentation panel.</li> <li>The questions I wrote on StackOverflow while learning PyQt5 and FBS are my biggest contributors to my StackOverflow score.</li> <li>This was my first professional experience, and it was paid 🎉.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_wyqz4h={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.d5a93181.js"),import("../_app/immutable/entry/app.305d15e9.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tee93z={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.98e73988.js"),import("../_app/immutable/entry/app.9748c142.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
