--- a/projects/fuse-rust.html
+++ b/projects/fuse-rust.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.5ab10349.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.1173c233.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
-		<link href="../_app/immutable/entry/start.d5a93181.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/start.98e73988.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/singletons.e9ac4644.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/singletons.568fe510.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="../_app/immutable/entry/app.305d15e9.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/app.9748c142.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/0.81236cbb.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/0.dcf7c39e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/stores.8883e9db.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/stores.f624a554.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
 		<link href="../_app/immutable/nodes/6.b1f206d1.js" rel="modulepreload">
@@ -36,7 +36,7 @@ it could suplement the use case for Rust in building desktop/native applications
 similarity. It also contains an opt-in multi-threaded implementation using <a href="https://github.com/crossbeam-rs/crossbeam" rel="nofollow">crossbeam</a>.</p> <p data-svelte-h="svelte-h9xsfq">Additionally I included an actual <a href="https://github.com/Blakeinstein/fuse-rust/tree/master/examples/search-bar" rel="nofollow">GUI example</a> using
 <a href="https://github.com/iced-rs/iced" rel="nofollow">iced-rs</a>.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-17yphbl"><li>I learnt about multibyte characters for the first time here.</li> <li>I learnt about the concept of graphemes in swift programming language.</li> <li>I learnt about the bitap algorithm and how it can be used to calculate text similarity.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_wyqz4h={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.d5a93181.js"),import("../_app/immutable/entry/app.305d15e9.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tee93z={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.98e73988.js"),import("../_app/immutable/entry/app.9748c142.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
