--- a/projects/new-portfolio.html
+++ b/projects/new-portfolio.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.5ab10349.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.1173c233.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
-		<link href="../_app/immutable/entry/start.d5a93181.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/start.98e73988.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/singletons.e9ac4644.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/singletons.568fe510.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="../_app/immutable/entry/app.305d15e9.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/app.9748c142.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/0.81236cbb.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/0.dcf7c39e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/stores.8883e9db.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/stores.f624a554.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
 		<link href="../_app/immutable/nodes/6.b1f206d1.js" rel="modulepreload">
@@ -41,7 +41,7 @@ I doubt the switch gave me actual benefits apart from some small cases of site i
 Learning Svelte and SvelteKit was a breeze, and I really enjoyed working with it (Thanks <a href="https://joyofcode.xyz/" rel="nofollow">JoyOfCode</a>!). I also used TailwindCSS
 for styling, moving away from much of the custom styles on my old website.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-1o1h4sf"><li>Most of the images on the site were made when the work on the page was finished (even after I wrote this line, fingers crossed).</li> <li>I used placeholder images from <a href="https://http.dog" rel="nofollow">http.dog</a> for the thumbnails, particularly the <a href="https://http.dog/204.avif" rel="nofollow">204 image</a>.</li> <li>The backdrop went through several iterations, and at one time featured a noise texture similar to the one used in <a href="https://arc.net/" rel="nofollow">Arc.net</a>.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_wyqz4h={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.d5a93181.js"),import("../_app/immutable/entry/app.305d15e9.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tee93z={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.98e73988.js"),import("../_app/immutable/entry/app.9748c142.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
