--- a/projects/old-portfolio.html
+++ b/projects/old-portfolio.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.5ab10349.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.1173c233.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.907b0a35.css" rel="stylesheet">
-		<link href="../_app/immutable/entry/start.85735f47.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/start.5fe2b293.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/scheduler.d96b1147.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/singletons.e83f2d53.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/singletons.7b2ed50e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.0d30a2cd.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/control.f5b05b5f.js" rel="modulepreload">
-		<link href="../_app/immutable/entry/app.2dd0c97c.js" rel="modulepreload">
+		<link href="../_app/immutable/entry/app.57c1fb57.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/preload-helper.41c905a7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.041c6ff6.js" rel="modulepreload">
-		<link href="../_app/immutable/nodes/0.f4b4c6f9.js" rel="modulepreload">
+		<link href="../_app/immutable/nodes/0.55596aa7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/Icon.cff3392e.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/spread.8a54911c.js" rel="modulepreload">
-		<link href="../_app/immutable/chunks/stores.371ab005.js" rel="modulepreload">
+		<link href="../_app/immutable/chunks/stores.ad2785e7.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/index.96a48171.js" rel="modulepreload">
 		<link href="../_app/immutable/chunks/context.31d84fd2.js" rel="modulepreload">
 		<link href="../_app/immutable/nodes/6.b1f206d1.js" rel="modulepreload">
@@ -38,7 +38,7 @@ a 3d scene used for the background. I am extremely proud of the micro-interactio
 contact form error messages. I also used blobity to implement the blob like cursor on desktop views. The website is hosted on Github Pages,
 and the source code is available on Github.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-18i5xmd"><li>It took me ages to settle on a design for the website. But once I found the album art for Light Mind, I knew I had to use it.</li> <li>The overall website was built in a single day.</li> <li>I never bothered to update the content of the website, the info was outdated the day I made it publically available.</li> <li>I was able to obtain a free <a href="https://www.is-a.dev/" rel="nofollow"><code>is-a.dev</code></a> domain under my name, which I used for the website.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_19wscsd={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.85735f47.js"),import("../_app/immutable/entry/app.2dd0c97c.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_1mkl9e9={base:new URL("..",location).pathname.slice(0,-1),env:{}};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.5fe2b293.js"),import("../_app/immutable/entry/app.57c1fb57.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
