--- a/projects/remit-tracker.html
+++ b/projects/remit-tracker.html
@@ -3,27 +3,27 @@
 		<link rel="icon" href="../favicon.png">
 		<meta name="viewport" content="width=device-width">
 		
-		<link href="../_app/immutable/assets/0.cwZPC1B3.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/0.YJd5q7bl.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.sXELWc-K.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.kRdzc35y.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.TefT1bLq.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.7UQayXNM.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.af36Ieq7.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.LFHAPvoo.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.kGPy-Uug.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.D31W5enu.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/singletons.9Q-GI8_u.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.nctEnZx9.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.RLLb8x6P.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.4dAj9G_4.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.uOK7BiI_.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.J8uKJo40.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.dQRL4XVt.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.-DQobN9K.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.uOJVaEoZ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.LCwVr1xO.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.3z3lMbEr.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.2Jy4n5SV.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/context.QStoeUfU.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.iz7iQmv2.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.czt92U9F.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/index.5adHVtFX.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/section.zbjTyyh5.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/context.Ce1dSRn5.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.iQP3Jn0M.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.aWBP2zG_.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/index.8Gro4tV-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/section.UwyDJA3L.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/each.-oqiv04n.js"><!-- HEAD_svelte-17ilb5s_START --><script data-svelte-h="svelte-8kopwt"></script><script defer="" data-domain="blaine.vip" data-svelte-h="svelte-112zxyl"></script><!-- HEAD_svelte-17ilb5s_END -->
 	</head>
 	<body data-sveltekit-preload-data="hover">
@@ -35,7 +35,7 @@ proivders and have it maintain a history to help me make better decisions.</p> <
 using Python and Scrapy. The frontend caches requests for 1 hour to avoid having to hit my server too often.
 The data spider is hosted on <a href="https://www.zyte.com/" rel="nofollow">Zyte</a> (formerly ScrapingHub) and runs every hour to update the data.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-1x3tiwt"><li>I never came up with a LOGO for the project, I just ended up using the first svg result with RT.</li> <li>I tried a bunch of charting library but ended up using <a href="https://www.chartjs.org/" rel="nofollow">Chart.js</a>.</li> <li>I used <a href="https://moment.github.io/luxon/#/" rel="nofollow">luxon</a> for parsing timestamps.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_141jj8e={base:new URL("..",location).pathname.slice(0,-1),env:null};const e=document.currentScript.parentElement,n=[null,null];Promise.all([import("../_app/immutable/entry/start.TefT1bLq.js"),import("../_app/immutable/entry/app.RLLb8x6P.js")]).then(([t,l])=>{t.start(l,e,{node_ids:[0,6],data:n,form:null,error:null})})}
+			<script>{__sveltekit_sj9k7y={base:new URL("..",location).pathname.slice(0,-1),env:null};const e=document.currentScript.parentElement,n=[null,null];Promise.all([import("../_app/immutable/entry/start.kGPy-Uug.js"),import("../_app/immutable/entry/app.4dAj9G_4.js")]).then(([t,l])=>{t.start(l,e,{node_ids:[0,6],data:n,form:null,error:null})})}
 </script>
 		
 		</div>
