deploy: 48a45b637abf700ede186e749365640f71bd1c70

--- a/projects/fuse-rust.html
+++ b/projects/fuse-rust.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.2X1iXlIJ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.TTMKwF4n.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Vc5bYEET.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.kNPRcbw8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.HQpC8y1T.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.-nidMElM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.JaNWo6su.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.eZXaf2Mn.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.1tDI2eAe.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.0wGKEarw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DpLNEm6-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.OztCBTXJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.j5Ns2_Pz.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/6.LC1AaVLG.js">
@@ -35,7 +35,7 @@ it could suplement the use case for Rust in building desktop/native applications
 similarity. It also contains an opt-in multi-threaded implementation using <a href="https://github.com/crossbeam-rs/crossbeam" rel="nofollow">crossbeam</a>.</p> <p data-svelte-h="svelte-h9xsfq">Additionally I included an actual <a href="https://github.com/Blakeinstein/fuse-rust/tree/master/examples/search-bar" rel="nofollow">GUI example</a> using
 <a href="https://github.com/iced-rs/iced" rel="nofollow">iced-rs</a>.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-17yphbl"><li>I learnt about multibyte characters for the first time here.</li> <li>I learnt about the concept of graphemes in swift programming language.</li> <li>I learnt about the bitap algorithm and how it can be used to calculate text similarity.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_1g45jw5={base:new URL("..",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.Vc5bYEET.js"),import("../_app/immutable/entry/app.JaNWo6su.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tcv0lx={base:new URL("..",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("../_app/immutable/entry/start.HQpC8y1T.js"),import("../_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,6],data:e,form:null,error:null})})}
 </script>
 		
 		</div>
