--- a/projects/new-portfolio.html
+++ b/projects/new-portfolio.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.2X1iXlIJ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.TTMKwF4n.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Vc5bYEET.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.kNPRcbw8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.HQpC8y1T.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.-nidMElM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.JaNWo6su.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.eZXaf2Mn.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.1tDI2eAe.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.0wGKEarw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DpLNEm6-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.OztCBTXJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.j5Ns2_Pz.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/6.LC1AaVLG.js">
@@ -41,7 +41,7 @@ I doubt the switch gave me actual benefits apart from some small cases of site i
 Learning Svelte and SvelteKit was a breeze, and I really enjoyed working with it (Thanks <a href="https://joyofcode.xyz/" rel="nofollow">JoyOfCode</a>!). I also used TailwindCSS
 for styling, moving away from much of the custom styles on my old website.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-1o1h4sf"><li>Most of the images on the site were made when the work on the page was finished (even after I wrote this line, fingers crossed).</li> <li>I used placeholder images from <a href="https://http.dog" rel="nofollow">http.dog</a> for the thumbnails, particularly the <a href="https://http.dog/204.avif" rel="nofollow">204 image</a>.</li> <li>The backdrop went through several iterations, and at one time featured a noise texture similar to the one used in <a href="https://arc.net/" rel="nofollow">Arc.net</a>.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_1g45jw5={base:new URL("..",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.Vc5bYEET.js"),import("../_app/immutable/entry/app.JaNWo6su.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tcv0lx={base:new URL("..",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("../_app/immutable/entry/start.HQpC8y1T.js"),import("../_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,6],data:e,form:null,error:null})})}
 </script>
 		
 		</div>
