--- a/projects/old-portfolio.html
+++ b/projects/old-portfolio.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.2X1iXlIJ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.TTMKwF4n.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Vc5bYEET.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.kNPRcbw8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.HQpC8y1T.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.-nidMElM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.JaNWo6su.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.eZXaf2Mn.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.1tDI2eAe.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.0wGKEarw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DpLNEm6-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.OztCBTXJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.j5Ns2_Pz.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/6.LC1AaVLG.js">
@@ -37,7 +37,7 @@ a 3d scene used for the background. I am extremely proud of the micro-interactio
 contact form error messages. I also used blobity to implement the blob like cursor on desktop views. The website is hosted on Github Pages,
 and the source code is available on Github.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-18i5xmd"><li>It took me ages to settle on a design for the website. But once I found the album art for Light Mind, I knew I had to use it.</li> <li>The overall website was built in a single day.</li> <li>I never bothered to update the content of the website, the info was outdated the day I made it publically available.</li> <li>I was able to obtain a free <a href="https://www.is-a.dev/" rel="nofollow"><code>is-a.dev</code></a> domain under my name, which I used for the website.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_1g45jw5={base:new URL("..",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.Vc5bYEET.js"),import("../_app/immutable/entry/app.JaNWo6su.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tcv0lx={base:new URL("..",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("../_app/immutable/entry/start.HQpC8y1T.js"),import("../_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,6],data:e,form:null,error:null})})}
 </script>
 		
 		</div>
