--- a/projects/remit-tracker.html
+++ b/projects/remit-tracker.html
@@ -6,18 +6,18 @@
 		<link href="../_app/immutable/assets/0.2X1iXlIJ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.TTMKwF4n.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.Vc5bYEET.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.kNPRcbw8.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.HQpC8y1T.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.-nidMElM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.JaNWo6su.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.eZXaf2Mn.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.1tDI2eAe.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.0wGKEarw.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.DpLNEm6-.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.OztCBTXJ.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.j5Ns2_Pz.js">
 		<link rel="modulepreload" href="../_app/immutable/nodes/6.LC1AaVLG.js">
@@ -34,7 +34,7 @@ proivders and have it maintain a history to help me make better decisions.</p> <
 using Python and Scrapy. The frontend caches requests for 1 hour to avoid having to hit my server too often.
 The data spider is hosted on <a href="https://www.zyte.com/" rel="nofollow">Zyte</a> (formerly ScrapingHub) and runs every hour to update the data.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-1x3tiwt"><li>I never came up with a LOGO for the project, I just ended up using the first svg result with RT.</li> <li>I tried a bunch of charting library but ended up using <a href="https://www.chartjs.org/" rel="nofollow">Chart.js</a>.</li> <li>I used <a href="https://moment.github.io/luxon/#/" rel="nofollow">luxon</a> for parsing timestamps.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_1g45jw5={base:new URL("..",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.Vc5bYEET.js"),import("../_app/immutable/entry/app.JaNWo6su.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
+			<script>{__sveltekit_tcv0lx={base:new URL("..",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("../_app/immutable/entry/start.HQpC8y1T.js"),import("../_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,6],data:e,form:null,error:null})})}
 </script>
 		
 		</div>
