deploy: 886862b9af2a378ceea1745af90c2fe06e20b459

--- a/contact.html
+++ b/contact.html
@@ -8,18 +8,18 @@
 		<link href="./_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Button.bkMEgoxD.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/Title.lAD6tzqU.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.HQpC8y1T.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/entry.-nidMElM.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.PBFEwB7d.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/entry.o1ITWuuM.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.eZXaf2Mn.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.kIuJwvhk.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="./_app/immutable/nodes/0.0wGKEarw.js">
+		<link rel="modulepreload" href="./_app/immutable/nodes/0.4yMI1rUW.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/stores.OztCBTXJ.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/stores.tQYM_8Fd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/context.j5Ns2_Pz.js">
 		<link rel="modulepreload" href="./_app/immutable/nodes/4.Zfd4blO6.js">
@@ -32,7 +32,7 @@
 			   <div class="scroll-indicator svelte-1luicmx"><span data-svelte-h="svelte-cf4qej">SCROLL</span> </div>  <background class="svelte-m5hcvk"> <hr class="wf svelte-1onz296" style="top:4.25rem;left:0%"> <hr class="wf svelte-1onz296" style="top:40%;left:0%"> <hr class="wf svelte-1onz296" style="top:85%;left:0%"> <hr class="wf svelte-1onz296 vertical" style="top:4.25rem;left:1.5rem"> <hr class="wf svelte-1onz296 vertical" style="top:4.25rem;left:calc(100% - 1.5rem)"> <matrix class="svelte-1v0prlu"></matrix> </background> <nav class="svelte-104jqkl"><a class="svelte-104jqkl nav-title" href="/" data-svelte-h="svelte-iq1wwd"><span class="svelte-104jqkl title-main">Blaine</span> <span>.is-a.dev</span></a> <div class="svelte-104jqkl nav-menu"><a href="/about" class="svelte-1i25n0a">About </a> <a href="/projects" class="svelte-1i25n0a">Projects </a> <a href="/contact" class="svelte-1i25n0a" aria-current="page">Contact </a> <a class="svelte-104jqkl nav-external" href="https://github.com/blakeinstein" target="_blank" rel="noopener noreferrer" data-blobity-tooltip="GitHub" aria-label="GitHub"></a></div> </nav> <main class="svelte-m5hcvk"><section class="wf grid-center svelte-1dkk2oq" data-lenis-scroll-snap-align="start"><div class="wf col inner-contact svelte-ku51h"><div class="col"><h1 class="header md svelte-yry5z4">MAKE CONTACT </h1> <span class="svelte-ku51h info" data-svelte-h="svelte-1n5sm45">Send me a message, regarding anything!</span></div> <div class="wf svelte-ku51h contact-container"><form class="wf col gap"><div class="svelte-ku51h row"><label class="svelte-1ia4t col">Name <input type="text" name="name" required="" placeholder="Your Name" class="svelte-1ia4t"> </label> <label class="svelte-1ia4t col">Email <input type="email" name="email" required="" placeholder="Email address" class="svelte-1ia4t"> </label></div> <label class="svelte-1ia4t col">Subject <input type="text" name="subject" required="" placeholder="Choose Subject" class="svelte-1ia4t"> </label> <label class="svelte-1ia4t col">message <textarea name="message" required="" placeholder="Start typing here" class="svelte-1ia4t"></textarea> </label> <div class="svelte-ku51h ospace"><label class="svelte-tdld6p"><input type="checkbox" name="confidence" id="noSpam" required="" class="svelte-tdld6p"> <span data-svelte-h="svelte-1o0fxqo">I solemnly swear I am not a troll...</span> </label></div> <div><button type="submit" class="contact-submit svelte-heyyjz"><svg class="fill iconl" version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 1000 1000" xml:space="preserve" height="2rem"><g><g transform="matrix(1 0 0 -1 0 1008)"><path d="M756.2,741.8L990,508L756.2,274.2l-27,27L918.1,490H10v36h908.1L729.3,714.8L756.2,741.8z"></path></g></g></svg>
               Submit </button></div></form></div></div> </section> </main> 
 			
-			<script>{__sveltekit_tcv0lx={base:new URL(".",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("./_app/immutable/entry/start.HQpC8y1T.js"),import("./_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,4],data:e,form:null,error:null})})}
+			<script>{__sveltekit_1y4rzwy={base:new URL(".",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("./_app/immutable/entry/start.PBFEwB7d.js"),import("./_app/immutable/entry/app.kIuJwvhk.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,4],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
