--- a/projects/bloop.html
+++ b/projects/bloop.html
@@ -6,22 +6,22 @@
 		<link href="../_app/immutable/assets/0.2X1iXlIJ.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/6.TTMKwF4n.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/section.8lzl0z0g.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/entry/start.HQpC8y1T.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/entry.-nidMElM.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/start.PBFEwB7d.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/entry.o1ITWuuM.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/scheduler.Pd8dchTd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.HUQYa8aR.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control.pJ1mnnAb.js">
-		<link rel="modulepreload" href="../_app/immutable/entry/app.eZXaf2Mn.js">
+		<link rel="modulepreload" href="../_app/immutable/entry/app.kIuJwvhk.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/preload-helper.0HuHagjb.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.ZpyY4ssA.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/0.0wGKEarw.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/0.4yMI1rUW.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Icon.v2v01xyS.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/spread.rEx3vLA9.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/stores.OztCBTXJ.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/stores.tQYM_8Fd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/_commonjsHelpers.5-cIlDoe.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/context.j5Ns2_Pz.js">
-		<link rel="modulepreload" href="../_app/immutable/nodes/6.LC1AaVLG.js">
-		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.vJJiK6yq.js">
+		<link rel="modulepreload" href="../_app/immutable/nodes/6.s0bRp3wf.js">
+		<link rel="modulepreload" href="../_app/immutable/chunks/ProjectData.mvCHz07s.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index.qNRJ-eAc.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/section.EL2d_oKt.js"><!-- HEAD_svelte-17ilb5s_START --><script data-svelte-h="svelte-8kopwt"></script><script defer="" data-domain="blaine.vip" data-svelte-h="svelte-112zxyl"></script><!-- HEAD_svelte-17ilb5s_END -->
 	</head>
@@ -38,7 +38,7 @@ a webview so that I could invoke JS scripts on the text. Initial implementation 
 CodeMirror with AceEditor for a huge performance boost. I also added a few more features like customizing the stylesheet via
 themes, and introduced the concept the editor being able to retain the pasted information.</p> <h2 data-svelte-h="svelte-1anz3rk">Fun Facts</h2> <ul data-svelte-h="svelte-1e6d88r"><li>I learnt how to write Context Free Grammers to implement the syntax highlighting for the editor.</li> <li>I learnt WinRT the native windows runtime to implement the inital version.</li> <li>I learnt how to dynamically import JS script files that export variables.</li></ul></div></div></div> </section> </main> 
 			
-			<script>{__sveltekit_tcv0lx={base:new URL("..",location).pathname.slice(0,-1)};const t=document.currentScript.parentElement,e=[null,null];Promise.all([import("../_app/immutable/entry/start.HQpC8y1T.js"),import("../_app/immutable/entry/app.eZXaf2Mn.js")]).then(([l,n])=>{l.start(n,t,{node_ids:[0,6],data:e,form:null,error:null})})}
+			<script>{__sveltekit_1y4rzwy={base:new URL("..",location).pathname.slice(0,-1)};const e=document.currentScript.parentElement,t=[null,null];Promise.all([import("../_app/immutable/entry/start.PBFEwB7d.js"),import("../_app/immutable/entry/app.kIuJwvhk.js")]).then(([n,l])=>{n.start(l,e,{node_ids:[0,6],data:t,form:null,error:null})})}
 </script>
 		
 		</div>
